# swatchthis

./: Cargo.toml  LICENCE  README.md  swatchthis.d.ts  swatchthis.js  swatchthis_bg.wasm
.github/workflows/: ci.yml  publish-npm.yml  publish-wasm.yml  publish.yml
demos/web/: index.html
demos/web_image/: build.sh  index.html
demos/web_video/: index.html
src/: algorithms.rs  color.rs  kmeans.rs  lib.rs  octree.rs  preprocessors.rs  swatch.rs
src/algorithms/: kmeans.rs  median_cut.rs  octree.rs
src/preprocessors/: seeds.rs  slic.rs
